# MySmartPowerCar

./: .gitmodules  Car.ioc  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make
Car/: .mxproject  CMakeLists.txt  Car.ioc  Makefile  STM32Make.make  openocd.cfg
Car/.cache/clangd/index/: car.c.5272A67076BB225B.idx  car.h.4808148E175F283E.idx  cmsis_compiler.h.00C4CE36D59E075A.idx  cmsis_gcc.h.FB2D1BE117739005.idx  cmsis_version.h.D1F65AF667C84A86.idx  core_cm3.h.50E3CB628E125B9E.idx  iwdg.c.2690F085C63D8A0D.idx  spi.h.DC6D26E01A6353CC.idx  stm32f103xb.h.A2CE64B86E14FC92.idx  stm32f1xx_hal.c.31775C878369187F.idx  stm32f1xx_hal.h.B4927B5D368A3FFF.idx  stm32f1xx_hal_conf.h.82F04348D86E610F.idx  stm32f1xx_hal_cortex.c.F158D098AB2407FF.idx  stm32f1xx_hal_def.h.B4EE9584B539EC7B.idx  stm32f1xx_hal_dma.c.1A3596A647D7E43B.idx  stm32f1xx_hal_dma.h.5295835AFE4DD4A1.idx  stm32f1xx_hal_dma_ex.h.F159945023F02E19.idx  stm32f1xx_hal_exti.h.67BDB846CC26E608.idx  stm32f1xx_hal_flash.c.302288AB3D6BE48E.idx  stm32f1xx_hal_flash_ex.c.0864594963DEF64F.idx  stm32f1xx_hal_gpio.h.64D25BA8B2EC9E6D.idx  stm32f1xx_hal_gpio_ex.c.7B0531FF6966A395.idx  stm32f1xx_hal_gpio_ex.h.18AFABAC6F50C267.idx  tim.h.5F4B890A1C94C3BE.idx  (+15 more)
Car/Inc/: car.h  handler.h  main.h  nrf24l01.h  proc.h  stm32f1xx_it.h
Car/Inc/Backup/: car.h.bak  driver.h.bak  main.h.bak  nrf24l01.h.bak  stm32f1xx_hal_conf.h.bak
Car/Src/: car.c  gpio.c  handler.c  main.c  nrf24l01.c  proc.c  spi.c  stm32f1xx_it.c  tim.c
Car/Src/Backup/: car.c.bak  driver.c.bak  hadler.c.bak  main.c.bak  nrf24l01.c.bak  proc.c.bak  spi.c.bak
(+66 files in other folders)
